# mlir-extensions

./: CMakeLists.txt
cmake/modules/: SDL.cmake  options.cmake
lib/Conversion/PTensorToLinalg/: PTensorToLinalg.cpp
mlir/: CMakeLists.txt
mlir/lib/Conversion/: gpu_runtime_to_llvm.cpp  gpu_to_gpu_runtime.cpp  linalg_reduction_to_parallel_loop.cpp
mlir/lib/ExecutionEngine/: CMakeLists.txt  igpu_runtime_wrapper.cpp  imex_utils.cpp
mlir/test/level_zero_runner/: argmax.mlir  argmax_2d.mlir  argmax_cf.mlir  argmax_i32.mlir  argmax_loop.mlir  argmax_step1.mlir  argmax_tree_reduction_i32.mlir  module_0050.jit_matmul.27.before_optimizations.txt.linalg.mlir  module_0125.jit_absolute.70.before_optimizations.txt.linalg.mlir  module_0145.jit__argmax.79.before_optimizations.txt.linalg.mlir  test.linalg.mlir
mlir/test/level_zero_runner/argonne_jax/janet/: janet.txt  module_0000.jit_log10.0.before_optimizations.txt.linalg.mlir  module_0002.jit_prim_fun.1.before_optimizations.txt.linalg.mlir  module_0004.jit__get_met_weights_singlegal.2.before_optimizations.txt.linalg.mlir  module_0009.jit_prim_fun.5.before_optimizations.txt.linalg.mlir  module_0042.jit__get_lgt_birth.11.before_optimizations.txt.linalg.mlir  module_0058.jit__unit_scale_traindata.8.before_optimizations.txt.linalg.mlir  module_0062.jit_prim_fun.11.before_optimizations.txt.linalg.mlir  module_0184.jit__net_loss.57.before_optimizations.txt.linalg.mlir  module_0243.jit_prim_fun.61.before_optimizations.txt.linalg.mlir  module_0245.jit_fn.62.before_optimizations.txt.linalg.mlir  module_0247.jit_fn.63.before_optimizations.txt.linalg.mlir  module_0249.jit_square.64.before_optimizations.txt.linalg.mlir  module_0251.jit_prim_fun.65.before_optimizations.txt.linalg.mlir  module_0404.jit_true_divide.142.before_optimizations.txt.linalg.mlir  module_0406.jit__lambda_.143.before_optimizations.txt.linalg.mlir  module_0428.jit_prim_fun.154.before_optimizations.txt.linalg.mlir
mlir/test/level_zero_runner/argonne_jax/qoc/: module_0018.jit__diag.9.before_optimizations.txt.linalg  module_0047.jit_prim_fun.25.before_optimizations.txt.linalg.mlir  module_0050.jit_matmul.27.before_optimizations.txt.linalg.mlir  module_0052.jit_kron.28.before_optimizations.txt.linalg  module_0052.jit_kron.28.before_optimizations.txt.linalg.mlir  module_0058.jit_kron.31.before_optimizations.txt.linalg.mlir  module_0062.jit__linspace.34.before_optimizations.txt.linalg.mlir  module_0068.jit_prim_fun.37.before_optimizations.txt.linalg.mlir  module_0080.jit_prim_fun.46.before_optimizations.txt.linalg  module_0080.jit_prim_fun.46.before_optimizations.txt.linalg.mlir  module_0090.jit_prim_fun.50.before_optimizations.txt.linalg  module_0090.jit_prim_fun.50.before_optimizations.txt.linalg.mlir  module_0104.jit_real.59.before_optimizations.txt.linalg.mlir  qoc.txt  (+8 more)
mlir/test/level_zero_runner/argonne_jax_orig/: summary.txt
mlir/test/level_zero_runner/tmp/: tmp.mlir  tmp2.mlir
mlir/tools/level_zero_runner/: CMakeLists.txt  level_zero_runner.cpp
numba_dpcomp/: setup.py
numba_dpcomp/numba_dpcomp/mlir/: gpu_runtime.py
numba_dpcomp/numba_dpcomp/mlir_compiler/: CMakeLists.txt
numba_dpcomp/numba_dpcomp/mlir_compiler/lib/: lowering.cpp
scripts/: build_locally.py
test/: CMakeLists.txt
test/imex-runner/: ptensor_arange.mlir
tools/: CMakeLists.txt
tools/dpcomp-opt/: CMakeLists.txt
tools/imex-runner/: imex-runner.py
(+26 files in other folders)
